custom scrollbar, minor ui fixes

--- a/assets/stylesheets/samaritan.css
+++ b/assets/stylesheets/samaritan.css
@@ -7,6 +7,15 @@
 }
 
 
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #aaa;
+}
+
+
 html {
     height: 100%;
     font-size: 62.5%;
@@ -125,6 +134,7 @@ body {
     display: block;
     width: 100%;
     height: 1.6rem;
+    max-height: 40rem;
     font: normal 1.6rem/1 "Consolas", monospace;
     color: #fff;
     background-color: transparent;
